--- a/CrudAppTail/client/src/App.css
+++ b/CrudAppTail/client/src/App.css
@@ -53,3 +53,17 @@
   width: 50%;
   margin: 50px auto;
 }
+
+.view{
+  width: 100%;
+}
+
+.card-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card{
+  text-align: center;
+}
